tests/e2e/scenarios/negative/uncaught_exception.ks
// E2E: uncaught exception must print stack trace with file:line (debug section).
export exception DivideByZero

1 / 0
